<resources>
    <string name="app_name">TOOLS</string>
    <string name="utto_description">Smart Tools App</string>
    <string name="tools_list">Tools Options</string>
    <string name="bluetooth">bluetooth</string>
    <string name="name_bt_option">Bluetooth</string>
    <string name="bt">Bluetooth</string>
    <string name="bt_on_off">Bluetooth On/Off</string>
    <string name="paired_dev">Paired Devices</string>
    <string name="available_devices">Available Devices</string>
    <string name="send_file">Send File</string>
    <string name="receive_file">Receive File</string>
    <string name="device_name">Device Name</string>
    <string name="photo_preview">Photo preview</string>
    <string name="take_photo">Take Photo</string>
    <string name="flashlight">Flashlight</string>
    <string name="device_name_view">Device Name</string>
    <string name="search">search</string>
    <string name="back_button">Back Button</string>
    <string name="send_a_file">Send File</string>
    <string name="recorder">Recorder</string>
    <string name="saved_recordings">Saved Recordings:</string>
    <string name="view_photo">View Photo</string>
    <string name="camera_back">Camera Back</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="my_camera">Camera</string>
    <string name="back_arrow">Back</string>
    <string name="upload_file">Upload File</string>
    <string name="tts">Text to Speech</string>
    <string name="type_your_text_here">Type your text here...</string>
    <string name="speak">Speak</string>
    <string name="speak_button">Speak</string>
    <string name="pause">Pause</string>
    <string name="clear">Clear</string>
    <string name="list_of_recordings">List of Recordings</string>
    <string name="play_recording">Play Recording</string>
    <string name="my_recorder">My Recorder</string>
    <string name="start_stop_recording">Start / Stop Recording</string>
    <string name="recorder_controls">Recorder</string>
    <string name="my_flashlight">My Flashlight</string>
    <string name="back_flashlight">Back Flashlight</string>
    <string name="front_flashlight">Front Flashlight</string>
    <string name="both_flashlights">Both Flashlights</string>
    <string name="speech_to_text">Speech to Text</string>
    <string name="content_speech_to_text">Your speech will appear here</string>
    <string name="speech_to_text_description">Speech to Text</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="timer">Timer</string>
    <string name="timer_description">Timer</string>
    <string name="start_time">00:00</string>
    <string name="reset">Reset</string>
    <string name="set_timer">Set Timer</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_description">Cancel</string>
    <string name="reset_description">Reset Time</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="time_list">00:00:00.00</string>
    <string name="start">Start</string>
    <string name="list">List</string>
    <string name="reset_stopwatch">Reset</string>
    <string name="calculator">Calculator</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="plus">+</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="minus">-</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="backdelete">⌫</string>
    <string name="times">×</string>
    <string name="slash">/</string>
    <string name="clear_all">C</string>
    <string name="zero_display">0</string>
</resources>