<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="30dp">

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:src="@drawable/baseline_arrow_back_24"
            app:tint="#333D79" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="75dp"
            android:text="@string/calculator"
            android:textAlignment="center"
            android:textColor="#333D79"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#EEEEEE"
        android:gravity="end|center_vertical"
        android:layout_marginTop="30dp"
        android:padding="12dp"
        android:text="@string/zero_display"
        android:textSize="32sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_marginTop="20dp"
        android:columnCount="4"
        android:rowCount="5"
        android:useDefaultMargins="true">

        <!-- Row 1 -->
        <Button
            android:id="@+id/btnClear"
            style="@style/CalcButton"
            android:text="@string/clear_all" />

        <Button
            android:id="@+id/btnDivide"
            style="@style/CalcButton"
            android:text="@string/slash" />

        <Button
            android:id="@+id/btnMultiply"
            style="@style/CalcButton"
            android:text="@string/times" />

        <Button
            android:id="@+id/btnDelete"
            style="@style/CalcButton"
            android:text="@string/backdelete" />

        <!-- Row 2 -->
        <Button
            android:id="@+id/btn7"
            style="@style/CalcButton"
            android:text="@string/seven" />

        <Button
            android:id="@+id/btn8"
            style="@style/CalcButton"
            android:text="@string/eight" />

        <Button
            android:id="@+id/btn9"
            style="@style/CalcButton"
            android:text="@string/nine" />

        <Button
            android:id="@+id/btnMinus"
            style="@style/CalcButton"
            android:text="@string/minus" />

        <!-- Row 3 -->
        <Button
            android:id="@+id/btn4"
            style="@style/CalcButton"
            android:text="@string/four" />

        <Button
            android:id="@+id/btn5"
            style="@style/CalcButton"
            android:text="@string/five" />

        <Button
            android:id="@+id/btn6"
            style="@style/CalcButton"
            android:text="@string/six" />

        <Button
            android:id="@+id/btnPlus"
            style="@style/CalcButton"
            android:text="@string/plus" />

        <!-- Row 4 -->
        <Button
            android:id="@+id/btn1"
            style="@style/CalcButton"
            android:text="@string/one" />

        <Button
            android:id="@+id/btn2"
            style="@style/CalcButton"
            android:text="@string/two" />

        <Button
            android:id="@+id/btn3"
            style="@style/CalcButton"
            android:text="@string/three" />

        <Button
            android:id="@+id/btnEquals"
            style="@style/CalcButton"
            android:text="@string/equal" />

        <!-- Row 5 -->
        <Button
            android:id="@+id/btn0"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_columnSpan="2"
            android:text="@string/zero" />

        <Button
            android:id="@+id/btnDot"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_columnSpan="2"
            android:text="@string/dot" />

    </GridLayout>

</LinearLayout>
