<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="147dp"
        android:layout_height="43dp"
        android:text="@string/bt"
        android:textAlignment="center"
        android:textColor="#333D79"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/deviceName"
        android:layout_width="168dp"
        android:layout_height="39dp"
        android:layout_marginTop="576dp"
        android:autofillHints="name"
        android:hint="@string/device_name"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/bluetoothSwitch"
        android:layout_width="319dp"
        android:layout_height="44dp"
        android:text="@string/bt_on_off"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/pairedDevicesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/paired_dev"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluetoothSwitch" />

    <ListView
        android:id="@+id/pairedList"
        android:layout_width="345dp"
        android:layout_height="165dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pairedDevicesText" />

    <TextView
        android:id="@+id/availableDevicesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/available_devices"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pairedList" />

    <ListView
        android:id="@+id/availableList"
        android:layout_width="345dp"
        android:layout_height="165dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availableDevicesText" />

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="45dp"
        android:layout_height="47dp"
        android:layout_marginTop="31dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.002"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/arrow_back_icon" />

    <TextView
        android:id="@+id/deviceNameView"
        android:layout_width="87dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="588dp"
        android:text="@string/device_name_view"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonDiscover"
        android:layout_width="42dp"
        android:layout_height="38dp"
        android:layout_marginTop="31dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/search"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:tint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <Button
        android:id="@+id/buttonSendFile"
        android:layout_width="115dp"
        android:layout_height="47dp"
        android:background="#333D79"
        android:text="@string/send_a_file"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />


</androidx.constraintlayout.widget.ConstraintLayout>
