<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#C3BEC0"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="173dp"
        android:layout_height="36dp"
        android:text="@string/my_camera"
        android:textAlignment="center"
        android:textColor="#333D79"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <ImageView
        android:id="@+id/photoView"
        android:layout_width="314dp"
        android:layout_height="351dp"
        android:background="@color/white"
        android:contentDescription="@string/photo_preview"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <Button
        android:id="@+id/captureButton"
        android:layout_width="289dp"
        android:layout_height="55dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/rounded_border"
        android:text="@string/take_photo"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="#003332"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonShare"
        android:layout_width="75dp"
        android:layout_height="71dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/share"
        android:padding="18dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.728"
        app:srcCompat="@android:drawable/ic_menu_share"
        app:tint="@color/black" />


    <ImageButton
        android:id="@+id/imageButtonDelete"
        android:layout_width="75dp"
        android:layout_height="71dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/delete"
        android:padding="18dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.728"
        app:srcCompat="@android:drawable/ic_menu_delete"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="47dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="59dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_button"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/textViewPhotos"
        android:layout_width="105dp"
        android:layout_height="22dp"
        android:text="@string/view_photo"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />


</androidx.constraintlayout.widget.ConstraintLayout>