<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FAEBEF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">


        <!-- Input Field with Upload Button Overlay -->
        <TextView
            android:id="@+id/textViewTexttoSpeechTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/tts"
            android:textColor="#333D79"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="46dp"
            android:layout_height="37dp"
            android:layout_marginTop="28dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintEnd_toStartOf="@+id/textViewTexttoSpeechTitle"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <FrameLayout
            android:id="@+id/inputContainer"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/textViewTexttoSpeechTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/editTextInput"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:autofillHints="Text"
                android:background="@drawable/input_text_border"
                android:gravity="top|start"
                android:hint="@string/type_your_text_here"
                android:inputType="textMultiLine"
                android:padding="16dp"
                android:scrollbars="vertical" />

            <ImageButton
                android:id="@+id/btnSelectFile"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="end"
                android:layout_margin="12dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/upload_file"
                android:padding="10dp"
                android:scaleType="fitCenter"
                app:srcCompat="@android:drawable/ic_menu_upload" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/buttonContainer"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputContainer">

            <Button
                android:id="@+id/btnSpeak"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginEnd="12dp"
                android:backgroundTint="#333D79"
                android:paddingHorizontal="24dp"
                android:text="@string/speak_button"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnPauseContinue"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginEnd="12dp"
                android:backgroundTint="#A33D3D"
                android:paddingHorizontal="24dp"
                android:text="@string/pause"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnClear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:backgroundTint="#555D7A"
                android:paddingHorizontal="24dp"
                android:text="@string/clear"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
